# themepark-assistant

./: .gitignore  CLAUDE.md  README.md
backend/: .gitignore  CLAUDE.md  README.md  config.py  genai_client.py  history_utils.py  main.py  models.py  orchestrator.py  pyproject.toml
backend/pipeline/: chunker.py  indexer.py  vector_store.py
backend/tools/: guide_tool.py  live_ops_mock.py  live_ops_tool.py  rag_tool.py
docs/: tech_spec.md  ui_spec.md
docs/phases/: phase_1.md  phase_2.md  phase_3.md  phase_4.md
frontend/: .env.example  CLAUDE.md  README.md  index.html  package-lock.json
frontend/src/: App.vue
frontend/src/api/: assistant.ts
frontend/src/components/: AppHeader.vue  ChatFeed.vue  ConnectorLabel.vue  InputBar.vue  LoadingDots.vue  SettingsPanel.vue  ToastNotification.vue  UserBubble.vue
frontend/src/composables/: useToast.ts
frontend/src/stores/: chat.ts
frontend/src/types/: index.ts
kb/adventure_world/: adventure_world_accessibility.md  adventure_world_area_guide.md  adventure_world_events_daily.md  jungle_trek.md  peak_assault.md  thunder_rapids.md
kb/fable_world/: dragon_flight.md  fable_world_accessibility.md  fable_world_area_guide.md  fable_world_events_daily.md  fable_world_events_fable_fest.md
kb/future_world/: data_dive.md  future_world_accessibility.md  future_world_area_guide.md  future_world_events_daily.md  future_world_events_innovation_days.md  neon_circuit.md  orbit_station.md
kb/park/: epic_worlds_area_guide.md  epic_worlds_events_program.md  epic_worlds_events_summer_nights.md  epic_worlds_tickets.md
(+10 files in other folders)
